scala-partest-tests/src/test/resources/scala/tools/partest/scalanative/2.13.12/neg/macro-bundle-need-qualifier.check
macro-bundle-need-qualifier.scala:10: error: package java.lang.impl is not a value
  def foo: Any = macro impl
                       ^
1 error
